Arreglado tema del registro de hora que no llegaba del front al back, falta terminar que muestre las horas trabajadas que no las muestra

--- a/TP WebApp/Presentacion/Views/Shift/ShiftControl.cshtml
+++ b/TP WebApp/Presentacion/Views/Shift/ShiftControl.cshtml
@@ -8,7 +8,7 @@
     <div>
         <label>Entry</label>
         <input type="time" name="Entry"/>
-        <label>@if (Model.Entry.Year < DateTime.Today.Year) { }
+        <label>@if (Model.Entry.Year <= DateTime.Today.Year) { }
         else
         {@Model.Entry.ToString("t") }</label>
         
