--- a/TP WebApp/Presentacion/Views/Shift/ShiftControl.cshtml
+++ b/TP WebApp/Presentacion/Views/Shift/ShiftControl.cshtml
@@ -26,19 +26,9 @@ else{@Model.Exit.ToString("t") }</label>
 
 <div>
 
-<button type="submit" id="save">Save</button>
+<button class="btn btn-primary" type="submit" id="save">Save</button>
 
 </div>
 </form>
 
 
-<script language="text/javascript">
-
-window.onload = function () {
-            if (document.getElementById('exit').value = null) {
-                document.getElementById('save').style.display = 'none';
-
-            }
-        }
-
-</script>
