--- a/TP WebApp/Presentacion/Views/Employee/Index.cshtml
+++ b/TP WebApp/Presentacion/Views/Employee/Index.cshtml
@@ -1,29 +1,30 @@
 ﻿@model List<Services.EmployeeModel>
-
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Country</th>
-            <th>Entry Date</th>
-            <th>Shift</th>
-            <th>Value by Hour</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var employee in Model)
-        {
+<div class="row">
+    <table class="table table-hover">
+        <thead>
             <tr>
-                <td>@employee.ID</td>
-                <td>@employee.FirstName</td>
-                <td>@employee.LastName</td>
-                <td>@employee.Country.CountryName</td>
-                <td>@employee.EntryDate</td>
-                <td>@employee.CurrentShift.Name</td>
-                <td>@employee.ValueByHour</td>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Country</th>
+                <th>Entry Date</th>
+                <th>Shift</th>
+                <th>Value by Hour</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model)
+            {
+                <tr>
+                    <td>@employee.ID</td>
+                    <td>@employee.FirstName</td>
+                    <td>@employee.LastName</td>
+                    <td>@employee.Country.CountryName</td>
+                    <td>@employee.EntryDate.Day/@employee.EntryDate.Month/@employee.EntryDate.Year</td>
+                    <td>@employee.CurrentShift.Name</td>
+                    <td>$@employee.ValueByHour</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
