--- a/TP WebApp/Presentacion/Views/Employee/ModifyEmployee.cshtml
+++ b/TP WebApp/Presentacion/Views/Employee/ModifyEmployee.cshtml
@@ -1,58 +1,65 @@
 ﻿@model Services.EmployeeModel
 
-<br />
-@if (ViewBag.Selected == null)
-{
-    using (Html.BeginForm("ModifyEmployee", "Employee", FormMethod.Post))
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
 
-    {
-       
-        @Html.LabelFor(e => e.FirstName, "Employee")
-        @Html.DropDownListFor(e => e.ID,
-                          new SelectList(ViewBag.AllEmployees, "ID", "FirstName"),
-                          new { @class = "form-control" })
+        @if (ViewBag.Selected == null)
+        {
+            using (Html.BeginForm("ModifyEmployee", "Employee", FormMethod.Post))
 
-        <input type="submit" value="Search" />
-    }
-}
-else
-{
-    <h1>@Model.FirstName @Model.LastName</h1>
+            {
+                <div class="form-group">
+                    @Html.LabelFor(e => e.FirstName, "Employee")
+                    @Html.DropDownListFor(e => e.ID,
+                                                      new SelectList(ViewBag.AllEmployees, "ID", "FirstName"),
+                                                      new { @class = "form-control" })
+                </div>
 
-    using (Html.BeginForm("Update", "Employee", FormMethod.Post))
-    {
-        <br />
-        
-        @Html.HiddenFor(e => e.ID)
+                <input class="btn btn-primary" type="submit" value="Search" />
+            }
+        }
+        else
+        {
+            <h1>@Model.FirstName @Model.LastName</h1>
 
-        @Html.LabelFor(e => e.FirstName, "First Name:")
-        @Html.TextBoxFor(e => e.FirstName, new { @class = "form-control" })<br />
-        @Html.ValidationMessageFor(e => e.FirstName)
+            using (Html.BeginForm("Update", "Employee", FormMethod.Post))
+            {
 
-        @Html.LabelFor(e => e.LastName, "Last Name:")
-        @Html.TextBoxFor(e => e.LastName, new { @class = "form-control" })<br />
-        @Html.ValidationMessageFor(e => e.LastName)
+                @Html.HiddenFor(e => e.ID)
 
-        @Html.LabelFor(e => e.Country.CountryName, "Country:")
-        @Html.DropDownListFor(e => e.Country.ID,
-             new SelectList(ViewBag.AllCountries, "ID", "CountryName", 1),
-             new { @class = "form-control" })<br />
-        @Html.ValidationMessageFor(e => e.Country.CountryName)
+                @Html.LabelFor(e => e.FirstName, "First Name:")
+                @Html.TextBoxFor(e => e.FirstName, new { @class = "form-control" })<br />
+                @Html.ValidationMessageFor(e => e.FirstName)
 
-        @Html.LabelFor(e => e.EntryDate, "Entry Date:")
-        @Html.TextBoxFor(e => e.EntryDate, new { @class = "form-control" })<br />
-        @Html.ValidationMessageFor(e => e.EntryDate)
+                @Html.LabelFor(e => e.LastName, "Last Name:")
+                @Html.TextBoxFor(e => e.LastName, new { @class = "form-control" })<br />
+                @Html.ValidationMessageFor(e => e.LastName)
 
-        @Html.LabelFor(e => e.CurrentShift.Name, "Shift:")
-        @Html.DropDownListFor(e => e.CurrentShift.ID,
-             new SelectList(ViewBag.AllShifts, "ID", "Name", 1),
-             new { @class = "form-control" })<br />
-        @Html.ValidationMessageFor(e => e.CurrentShift.Name)
+                @Html.LabelFor(e => e.Country.CountryName, "Country:")
+                @Html.DropDownListFor(e => e.Country.ID,
+                              new SelectList(ViewBag.AllCountries, "ID", "CountryName", 1),
+                              new { @class = "form-control" })<br />
+                @Html.ValidationMessageFor(e => e.Country.CountryName)
 
-        @Html.LabelFor(e => e.ValueByHour, "Value by Hour:")
-        @Html.TextBoxFor(e => e.ValueByHour, new { @class = "form-control" })<br />
-        @Html.ValidationMessageFor(e => e.ValueByHour)
+                @Html.LabelFor(e => e.EntryDate, "Entry Date:")
+                @Html.TextBoxFor(e => e.EntryDate, new { @class = "form-control" })<br />
+                @Html.ValidationMessageFor(e => e.EntryDate)
 
-        <input type="submit" value="Modify" />
-    }
-}
+                @Html.LabelFor(e => e.CurrentShift.Name, "Shift:")
+                @Html.DropDownListFor(e => e.CurrentShift.ID,
+                              new SelectList(ViewBag.AllShifts, "ID", "Name", 1),
+                              new { @class = "form-control" })<br />
+                @Html.ValidationMessageFor(e => e.CurrentShift.Name)
+
+                @Html.LabelFor(e => e.ValueByHour, "Value by Hour:")
+                @Html.TextBoxFor(e => e.ValueByHour, new { @class = "form-control" })<br />
+                @Html.ValidationMessageFor(e => e.ValueByHour)
+
+                <input class="btn btn-primary" type="submit" value="Modify" />
+            }
+        }
+
+    </div>
+    <div class="col-sm-2"></div>
+</div>
