--- a/TP WebApp/Presentacion/Views/Shared/_Layout.cshtml
+++ b/TP WebApp/Presentacion/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
     <title>@ViewBag.Title - LAB .NET Application</title>
 </head>
 <body>
