estetica de la seccion de registro de asistencias

--- a/TP WebApp/Presentacion/Views/Shift/EmployeeTurn.cshtml
+++ b/TP WebApp/Presentacion/Views/Shift/EmployeeTurn.cshtml
@@ -1,43 +1,57 @@
 ﻿@model List<Services.Models.ShiftControlModel>
 
-<table>
-    <thead>
-        <tr>
-            <th>Register</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var employee in this.Model)
-        {
+<div class="row">
+
+    <table class="table table-hover">
+        <thead>
             <tr>
-
-                <td>@employee.Employee.ID</td> <td>-</td>
-               <td>@employee.Employee.FirstName</td>
-                <td>@employee.Employee.LastName</td> <td>-</td>
-                <td>@if (@employee.Entry.Year < DateTime.Today.Year)
-                {
-
-                }
-                else
-                {
-                    @employee.Entry.ToString("t")
-                }</td> <td>/</td>
-                   <td>@if (@employee.Entry.Year < DateTime.Today.Year)
-                {
-
-                }
-                else
-                {
-                        @employee.Exit.ToString("t")
-                 }</td> <td>-</td>
-                 
-                <td>@if (employee.WorkedHours <= 0) { }
-                else {@employee.WorkedHours <span>hs</span>}</td> <td>-</td>  <td><a href="/Shift/ShiftControl?ID=@employee.ID&Day=@DateTime.Today&Employee.ID=@employee.Employee.ID&Entry=@employee.Entry&Exit=@employee.Exit&WorkedHours=@employee.WorkedHours">AgregarHorario</a></td>
-
-             
-
+                <th>Register ID</th>
+                <th>Employee</th>
+                <th>Entry</th>
+                <th>Exit</th>
+                <th>Worked hours</th>
+                <th>Actions</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var employee in this.Model)
+            {
+                <tr>
 
+                    <td>@employee.Employee.ID</td>
+                    <td>@employee.Employee.FirstName @employee.Employee.LastName</td>
+                    <td>
+                        @if (@employee.Entry.Year < DateTime.Today.Year)
+                        {
+
+                        }
+                        else
+                        {
+                            @employee.Entry.ToString("t")
+                        }
+                    </td>
+                    <td>
+                        @if (@employee.Entry.Year < DateTime.Today.Year)
+                        {
+
+                        }
+                        else
+                        {
+                            @employee.Exit.ToString("t")
+                        }
+                    </td>
+                    <td>
+                        @if (employee.WorkedHours <= 0) { }
+                        else
+                        {@employee.WorkedHours <span>hs</span>}
+                    </td>
+                    <td><a href="/Shift/ShiftControl?ID=@employee.ID&Day=@DateTime.Today&Employee.ID=@employee.Employee.ID&Entry=@employee.Entry&Exit=@employee.Exit&WorkedHours=@employee.WorkedHours">Add Shift</a></td>
+
+
+
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
