--- a/TP WebApp/Presentacion/Views/Shift/ShiftControl.cshtml
+++ b/TP WebApp/Presentacion/Views/Shift/ShiftControl.cshtml
@@ -1,34 +1,43 @@
 ﻿@model Services.Models.ShiftControlModel
 
-<form action="/shift/shiftcontrolinsert" method="post">
-    <div>
-        <label>Id</label>
-        <input type="text" name="ID" value="@Model.ID" readonly/>
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
+
+
+        <form action="/shift/shiftcontrolinsert" method="post">
+            <div class="form-group">
+                <label>Id</label>
+                <input class="form-control" type="text" name="ID" value="@Model.ID" readonly />
+            </div>
+            <div class="form-group">
+                <label>Entry</label>
+                <input class="form-control" type="time" name="Entry" />
+                <label>
+                    @if (Model.Entry.Year <= DateTime.Today.Year) { }
+                    else
+                    {@Model.Entry.ToString("t")}
+                </label>
+
+            </div>
+
+            <div class="form-group">
+
+                <label>Exit</label>
+                <input class="form-control" type="time" name="Exit" />
+                <label>
+                    @if (Model.Exit.Year < DateTime.Today.Year && Model.Entry.Year < DateTime.Today.Year) { }
+                    else
+                    {@Model.Exit.ToString("t")}
+                </label>
+
+
+            </div>
+
+            <button class="btn btn-primary" type="submit" id="save">Save</button>
+
+        </form>
+
     </div>
-    <div>
-        <label>Entry</label>
-        <input type="time" name="Entry"/>
-        <label>@if (Model.Entry.Year <= DateTime.Today.Year) { }
-        else
-        {@Model.Entry.ToString("t") }</label>
-        
+    <div class="col-sm-2"></div>
 </div>
-
-<div>
-
-<label>Exit</label>
-    <input type="time" name="Exit" />
-<label>@if (Model.Exit.Year < DateTime.Today.Year && Model.Entry.Year < DateTime.Today.Year) { }
-else{@Model.Exit.ToString("t") }</label>
-
-
-</div>
-
-<div>
-
-<button class="btn btn-primary" type="submit" id="save">Save</button>
-
-</div>
-</form>
-
-
