--- a/TP WebApp/Presentacion/Views/Shift/ShiftControl.cshtml
+++ b/TP WebApp/Presentacion/Views/Shift/ShiftControl.cshtml
@@ -4,35 +4,37 @@
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
 
-
         <form action="/shift/shiftcontrolinsert" method="post">
             <div class="form-group">
                 <label>Id</label>
                 <input class="form-control" type="text" name="ID" value="@Model.ID" readonly />
             </div>
-            <div class="form-group">
-                <label>Entry</label>
-                <input class="form-control" type="time" name="Entry" />
-                <label>
-                    @if (Model.Entry.Year <= DateTime.Today.Year) { }
-                    else
-                    {@Model.Entry.ToString("t")}
-                </label>
+            @if (ViewBag.Section == 1)
+            {
+                <div class="form-group">
+                    <label>Entry</label>
+                    <input class="form-control" type="time" name="Entry" />
+                    <label>
+                        @if (Model.Entry.Year <= DateTime.Today.Year) { }
+                        else
+                        {@Model.Entry.ToString("t")}
+                    </label>
 
-            </div>
+                </div>
+            }
+            @if (ViewBag.Section == 2)
+            {
+                <div class="form-group">
 
-            <div class="form-group">
-
-                <label>Exit</label>
-                <input class="form-control" type="time" name="Exit" />
-                <label>
-                    @if (Model.Exit.Year < DateTime.Today.Year && Model.Entry.Year < DateTime.Today.Year) { }
-                    else
-                    {@Model.Exit.ToString("t")}
-                </label>
-
-
-            </div>
+                    <label>Exit</label>
+                    <input class="form-control" type="time" name="Exit" />
+                    <label>
+                        @if (Model.Exit.Year < DateTime.Today.Year && Model.Entry.Year < DateTime.Today.Year) { }
+                        else
+                        {@Model.Exit.ToString("t")}
+                    </label>
+                </div>
+            }
 
             <button class="btn btn-primary" type="submit" id="save">Save</button>
 
